# ddl

./: .clang-tidy  CMakeLists.txt  README.md  ddl.h  legacy_error_macros.h
.github/workflows/: build.yml  build_tags.yml
cmake/: check_cmake_build_type.cmake  check_cmake_install_prefix.cmake  ddl-config.cmake.in  ddl4.1_replacements.txt  enable_multicore_compilation.cmake  migrate_to_ddl_4_1.cmake  migrate_to_ddl_4_1.sh.in  set_library_naming_conventions.cmake  use_integrated_debug_symbols.cmake
codec/: access_element.h  bitserializer.cpp  bitserializer.h  codec.cpp  codec.h  codec.sources  codec_factory.cpp  codec_factory.h  element_accessor.cpp  element_accessor.h  pkg_codec.h  static_codec.cpp  static_codec.h  struct_element.h  struct_layout.cpp  struct_layout.h
ddlgenerators/: CMakeLists.txt
ddlgenerators/ddl2header/: CMakeLists.txt  ddl2header_commandline.cpp  ddl2header_commandline.h  main.cpp
ddlgenerators/generator_library/: CMakeLists.txt  commandline.cpp  commandline.h  ddl_generator_core.cpp  ddl_generator_core.h  ddl_generator_lib.sources  ddl_manager.cpp  ddl_manager.h
ddlgenerators/generator_library/headerrepresentation/: ddl_to_header_converter.cpp  ddl_to_header_converter.h  header_base_intf.h  header_basic_type.cpp  header_basic_type.h  header_constant.cpp  header_constant.h  header_enum.cpp  header_enum.h  header_factorymethod_intf.h  header_header.cpp  header_header.h  header_importer.cpp  header_importer.h  header_printer.cpp  header_printer.h  header_struct.cpp  header_struct.h  header_struct_element.cpp  header_struct_element.h  header_to_ddl_converter.cpp  header_to_ddl_converter.h  header_type.cpp  header_type.h  header_typedef.cpp  header_typedef.h  header_visitor_intf.h  parserhelper.cpp  parserhelper.h
ddlgenerators/header2ddl/: CMakeLists.txt  header2ddl_commandline.cpp  header2ddl_commandline.h  main.cpp
ddlrepresentation/: ddl_common.h  ddl_error.cpp  ddl_error.h  ddl_intf.h  ddl_type.cpp  ddl_type.h  ddlalignment.cpp  ddlalignment.h  ddlbaseunit.cpp  ddlbaseunit.h  ddlbyteorder.cpp  ddlbyteorder.h  ddlcloner.cpp  ddlcloner.h  ddlcompare.cpp  ddlcompare.h  ddlcomplex.cpp  ddlcomplex.h  ddlcontainer.cpp  ddlcontainer.h  ddldatatype.cpp  ddldatatype.h  ddldatatype_intf.h  ddldescription.cpp  ddldescription.h  ddlelement.cpp  ddlelement.h  ddlenum.cpp  ddlenum.h  ddlextdeclaration.cpp  ddlextdeclaration.h  ddlfactorymethod_intf.h  ddlheader.cpp  ddlheader.h  ddlimporter.cpp  ddlimporter.h  ddlinspector.cpp  ddlinspector.h  ddlprefix.cpp  ddlprefix.h  (+25 more)
doc/: CMakeLists.txt  changelog.md  run_doxygen.cmake.in
doc/input/: codec.md  ddl3.xsd  ddl4.xsd  ddl_generators.md  ddl_specification.md  mapping_configuration.xsd  mapping_specification.md  migration_4_1.md  mpl.md  oo-ddl.md  used_licenses.md
doc/static/: ddl.html
mapping/: ddl_helper.cpp  ddl_helper.h  mapping.sources  pkg_mapping.h
mapping/configuration/: map_assignment.cpp  map_assignment.h  map_configuration.cpp  map_configuration.h  map_header.cpp  map_header.h  map_source.cpp  map_source.h  map_target.cpp  map_target.h  map_transformation.cpp  map_transformation.h  map_trigger.cpp  map_trigger.h
mapping/engine/: data_trigger.cpp  data_trigger.h  element.cpp  element.h  mapping_engine.cpp  mapping_engine.h  mapping_environment_intf.h  periodic_trigger.cpp  periodic_trigger.h  signal_trigger.cpp  signal_trigger.h  source.cpp  source.h  target.cpp  target.h  trigger.cpp  trigger.h
serialization/: pkg_serialization.h  serialization.cpp  serialization.h  serialization.sources
test/: CMakeLists.txt  README.md
test/_common/: CMakeLists.txt  adtf_compat.h  compat.h
test/codec/files/: hca.description
test/codec/src/: CMakeLists.txt  tester_bitserializer.cpp  tester_codec.cpp  tester_mediacoder_regression.cpp
test/ddlgenerators/src/: CMakeLists.txt  tester_ddl_generators.cpp
test/ddlinspector/files/: ArrayZero.description  DynArraySize.description  NestedCaps.description  NestedNaming.description  StructElementNaming.description  UnitNaming.description  base_all_duplicates.description  invalid_duplicate.description
test/ddlinspector/src/: CMakeLists.txt  tester_ddlinspector.cpp
test/ddlrepresentation/files/: adtf.description  adtf1.description  adtf2.xml  adtf_1_02.description  adtf_1_0p_out_expected.xml  adtf_1_0p_resolved_expected.xml  adtf_changed_expected.xml  adtf_dynamic.description  adtf_merged_expected.xml  adtf_merged_ovrwrt_expected.xml  adtf_min_max_default.description  adtf_out_expected.xml  adtf_recursion.description  adtf_resolved_expected.xml  adtf_v40.description  fep_driver.description  force_version_ddl-2.0.description  force_version_ddl-2.0_to_3.0_expected.description  force_version_ddl-3.0.description  invalid_numbits_attribute.description  no_structs.description  partial_expected.description  printer.description  test_insert.description  test_insert_results.description  test_insert_results_ref.description  unresolved_datatype.description
test/ddlrepresentation/src/: CMakeLists.txt  ddl_definitions.h  tester_ddlrepresentation.cpp
test/function/api/src/: CMakeLists.txt  test_fixture_ddl_types.h  tester_ddl_types.cpp
test/headerrepresentation/files/: adtf2.description  adtf_expected.h  array_header.h  array_header_expected.description  array_header_expected.h  commented_header.h  complex_header.h  complex_header_expected.description  complex_header_expected.h  complex_struct2_expected.description  constants_header.h  default_types_header.h  defines_header.h  faulty_header1.h  faulty_header2.h  faulty_header3.h  faulty_header4.h  faulty_header5.h  packing_header.h  packing_header_expected.description  packing_header_expected.h  simple_header.h  simple_header_expected.description  simple_header_expected.h  simple_header_result.description  typedef_header.h  typedef_header_expected.h  viRDBIcd.description  viRDBIcd.h  viRDBIcd_expected.description  viRDBIcd_expected.h  wrong_header.h  (+2 more)
test/headerrepresentation/src/: CMakeLists.txt  ddl_definitions.h  tester_headerrepresentation.cpp
test/mapping/src/: CMakeLists.txt  tester_mapping.cpp
(+74 files in other folders)
